prevent overflowing of banner background

--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -506,10 +506,10 @@ u {
         min-width: 100%;
         min-height: 170px;
         background-image: url(/images/c-diamond-light.png);
-        padding-left: 100px;
-        margin-left: -100px;
-        padding-right: 100px;
-        margin-right: -100px;
+        padding-left: 60px;
+        margin-left: -60px;
+        padding-right: 60px;
+        margin-right: -60px;
         height: 170px;
         background-size: auto 100%;
         background-repeat: no-repeat;
